--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <input type="hidden" name="form-name" value="contact" />
             <p class="hidden">
               <label
-                >Don't fill this out if you're humna:
+                >Don't fill this out if you're human:
                 <input name="bot-field" />
               </label>
             </p>
@@ -103,12 +103,12 @@
             </div>
           </a>
 
-          <a href="aisles/eggsAndDairy.html">
+          <!-- <a href="aisles/eggsAndDairy.html">
             <div class="card btn">
               <h4>Eggs and Dairy</h4>
               <i class="fas fa-egg"></i>
             </div>
-          </a>
+          </a> -->
 
           <a href="aisles/pastryAndBakery.html">
             <div class="card btn">
